<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:paddingTop="23dp"
    android:paddingLeft="20dp"
    android:paddingRight="20dp"
    android:paddingBottom="47dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
   >

    <LinearLayout
        android:layout_width="match_parent"
        android:id="@+id/dataContainer"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:layout_height="match_parent">
        <com.google.android.material.card.MaterialCardView
            android:layout_width="100dp"
            android:layout_height="100dp"
            app:cardElevation="8dp"
            android:outlineAmbientShadowColor="@color/black"
            android:outlineSpotShadowColor="@color/black" />

        <com.google.android.material.card.MaterialCardView
            android:layout_width="44dp"
            android:layout_height="44dp"
            app:cardCornerRadius="22dp"
            app:cardElevation="0dp"
            android:layout_gravity="start"
            android:id="@+id/btnBack"
            app:cardBackgroundColor="#F7F7F9"
            app:strokeWidth="0dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Привет!" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Заполните Свои данные или продолжите через социальные медиа" />


        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:boxStrokeWidth="0dp"
            app:boxBackgroundColor="#F7F7F9"
            android:hint="xyz@gmail.com"
            app:boxCornerRadiusBottomEnd="14dp"
            app:boxCornerRadiusBottomStart="14dp"
            app:boxCornerRadiusTopStart="14dp"
            app:boxCornerRadiusTopEnd="14dp"
            android:layout_height="wrap_content">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etEmail"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:boxStrokeWidth="0dp"
            app:boxBackgroundColor="#F7F7F9"
            android:hint="********"
            app:boxCornerRadiusBottomEnd="14dp"
            app:boxCornerRadiusBottomStart="14dp"
            app:boxCornerRadiusTopStart="14dp"
            app:boxCornerRadiusTopEnd="14dp"
            app:passwordToggleEnabled="true"
            android:layout_height="wrap_content">
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:id="@+id/etPassword"
                android:layout_height="match_parent" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Войти"
            android:id="@+id/btnSignIn" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:boxStrokeWidth="0dp"
            app:boxBackgroundColor="#F7F7F9"
            android:hint="xyz@gmail.com"
            android:layout_height="match_parent">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="hint" />
        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>

    <ProgressBar
        android:layout_width="wrap_content"
        android:id="@+id/progress"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:layout_gravity="center" />



</FrameLayout>